cloudHost CURD && sync host from TencentCloud
