# openapi.yaml
@@ -19,6 +19,114 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/helloworld.v1.ClusterListResponse'
+    /cmdb/SyncFromTencent:
+        post:
+            tags:
+                - Greeter
+            operationId: Greeter_SyncFromTencent
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/helloworld.v1.SyncFromTencentRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.SyncFromTencentReply'
+    /cmdb/createInstance:
+        post:
+            tags:
+                - Greeter
+            operationId: Greeter_CreateInstance
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/helloworld.v1.CreateInstanceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.CreateInstanceReply'
+    /cmdb/deleteInstance/{UUID}:
+        delete:
+            tags:
+                - Greeter
+            operationId: Greeter_DeleteInstanceById
+            parameters:
+                - name: UUID
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.DeleteInstanceReply'
+    /cmdb/getInstance/{UUID}:
+        get:
+            tags:
+                - Greeter
+            operationId: Greeter_GetInstance
+            parameters:
+                - name: UUID
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.GetInstanceReply'
+    /cmdb/listInstances:
+        get:
+            tags:
+                - Greeter
+            operationId: Greeter_ListInstances
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.ListInstancesReply'
+    /cmdb/updateInstance/{UUID}:
+        put:
+            tags:
+                - Greeter
+            operationId: Greeter_UpdateInstance
+            parameters:
+                - name: UUID
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/helloworld.v1.UpdateInstanceRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/helloworld.v1.UpdateInstanceReply'
     /helloworld/{name}:
         get:
             tags:
@@ -98,15 +206,129 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/helloworld.v1.Cluster'
+        helloworld.v1.CreateInstanceReply:
+            type: object
+            properties:
+                Instance:
+                    $ref: '#/components/schemas/helloworld.v1.Host'
+        helloworld.v1.CreateInstanceRequest:
+            type: object
+            properties:
+                Instance:
+                    $ref: '#/components/schemas/helloworld.v1.Host'
+        helloworld.v1.DeleteInstanceReply:
+            type: object
+            properties: {}
         helloworld.v1.Empty:
             type: object
             properties: {}
+        helloworld.v1.GetInstanceReply:
+            type: object
+            properties:
+                Instance:
+                    $ref: '#/components/schemas/helloworld.v1.Host'
         helloworld.v1.HelloReply:
             type: object
             properties:
                 message:
                     type: string
             description: The response message containing the greetings
+        helloworld.v1.Host:
+            type: object
+            properties:
+                UUID:
+                    type: string
+                State:
+                    type: string
+                IPV6AddressPublic:
+                    type: array
+                    items:
+                        type: string
+                IPV6AddressPrivate:
+                    type: array
+                    items:
+                        type: string
+                IPV4AddressPublic:
+                    type: array
+                    items:
+                        type: string
+                IPV4AddressPrivate:
+                    type: array
+                    items:
+                        type: string
+                Memory:
+                    type: integer
+                    format: int64
+                CPU:
+                    type: integer
+                    format: int64
+                CreatedTime:
+                    type: string
+                    format: date-time
+                ExpitedTime:
+                    type: string
+                    format: date-time
+                InstanceName:
+                    type: string
+                ImageName:
+                    type: string
+                OSType:
+                    type: string
+                Manufacturer:
+                    type: string
+                Zone:
+                    type: string
+                SecurityGroups:
+                    type: array
+                    items:
+                        type: string
+                BillType:
+                    type: string
+                ChargeType:
+                    type: string
+                IsActive:
+                    type: boolean
+                InstanceType:
+                    type: string
+        helloworld.v1.ListInstancesReply:
+            type: object
+            properties:
+                total:
+                    type: integer
+                    format: int64
+                Instances:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/helloworld.v1.Host'
+        helloworld.v1.SyncFromTencentReply:
+            type: object
+            properties:
+                message:
+                    type: string
+                total:
+                    type: integer
+                    format: int64
+        helloworld.v1.SyncFromTencentRequest:
+            type: object
+            properties:
+                accessKey:
+                    type: string
+                secretKey:
+                    type: string
+                region:
+                    type: string
+        helloworld.v1.UpdateInstanceReply:
+            type: object
+            properties:
+                Instance:
+                    $ref: '#/components/schemas/helloworld.v1.Host'
+        helloworld.v1.UpdateInstanceRequest:
+            type: object
+            properties:
+                UUID:
+                    type: string
+                Instance:
+                    $ref: '#/components/schemas/helloworld.v1.Host'
         helloworld.v1.User:
             type: object
             properties:
